# fast_api_project

./: docs  instagram.db  items_views.py  main.py  pyproject.toml  requirements.txt  schemas.py  test.py
sho_app/: pyproject.toml
users/: crud.py  schemas.py  views.py
