[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr",email = "kazus92@list.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.123.5,<0.124.0)",
    "uvicorn[standart] (>=0.38.0,<0.39.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
