[project]
name = "sho-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexandr",email = "kazus92@list.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "sho_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
